# amazon-transactions

./: .gitignore  README.md  pyproject.toml
amazon_transactions/: invoices.py  main.py  navigate.py  orders.py  parse.py
